Bug 1380323 - Revise the behavior of scrolling to fragments. r=ehsan